--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'net.honux'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -14,4 +14,8 @@ repositories {
 dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:5.6.0")
     testCompile("org.assertj:assertj-core:3.11.1")
+}
+
+test {
+    useJUnitPlatform()
 }
