--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:5.6.0")
     testCompile("org.assertj:assertj-core:3.11.1")
+    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.4.RELEASE'
+
 }
 
 test {
